# Copyright (C) AlphaKeks <alphakeks@dawn.sh>
#
# This is free software. You can redistribute it and / or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation, either version 3
# of the License, or (at your option) any later version.
#
# You should have received a copy of the GNU General Public License along with this repository.
# If not, see <https://www.gnu.org/licenses/>.

[package]
name = "sql-format"
version = "0.0.0"
authors = ["AlphaKeks <alphakeks@dawn.sh>"]
edition = "2021"
repository = "https://github.com/AlphaKeks/sql-format.git"
license-file = "./LICENSE"
publish = false

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
sqlformat = "0.2.2"
